# nowcasting_gdp

./: Readme.md  pyproject.toml
src/: main.py
src/config/: params.py  paths.py
src/input/cleaned/: data_raw.csv  data_tf.csv
src/lib/: data_helpers.py  model_helpers.py
src/notebooks/: model_arma.ipynb  model_mlp.ipynb  model_rf.ipynb  model_xgb.ipynb
src/scripts/: a_make_fred.py  b_train_models.py
